--- a/index.html
+++ b/index.html
@@ -18,6 +18,27 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="quote-container" id="quote-container">
+      <!-- Quote-->
+      <div class="quote-text">
+        <i class="fas fa-quote-left"></i>
+        <span id="quote"
+          >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam
+          dolore hic quam corporis dignissimos explicabo aperiam sint!</span
+        >
+      </div>
+      <!-- Author-->
+      <div class="quote-author">
+        <span id="author">Buddha</span>
+      </div>
+      <!-- Buttons -->
+      <div class="button-container">
+        <button class="twitter-button" id="twitter" title="Tweet This!">
+          <i class="fab fa-twitter"></i>
+        </button>
+        <button id="new-quote">New Quote</button>
+      </div>
+    </div>
     <!--Script -->
     <script src="script.js"></script>
   </body>
