--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
       <!-- Quote-->
       <div class="quote-text">
         <i class="fas fa-quote-left"></i>
-        <span id="quote"
-          >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam
-          dolore hic quam corporis dignissimos explicabo aperiam sint!</span
-        >
+        <span id="quote"></span>
       </div>
       <!-- Author-->
       <div class="quote-author">
-        <span id="author">Buddha</span>
+        <span id="author"></span>
       </div>
       <!-- Buttons -->
       <div class="button-container">
@@ -39,6 +36,8 @@
         <button id="new-quote">New Quote</button>
       </div>
     </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
     <!--Script -->
     <script src="script.js"></script>
   </body>
